--- a/DemoMVC/Views/Person/Delete.cshtml
+++ b/DemoMVC/Views/Person/Delete.cshtml
@@ -1,4 +1,4 @@
-@model DemoMVC.Models.Lophoc
+@model DemoMVC.Models.Person
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,19 +8,25 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Lophoc</h4>
+    <h4>Person</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.Hoten)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.Hoten)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Quequan)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Quequan)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="FullName" />
+        <input type="hidden" asp-for="CCCD" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
