--- a/DemoMVC/Views/Person/Details.cshtml
+++ b/DemoMVC/Views/Person/Details.cshtml
@@ -1,4 +1,4 @@
-@model DemoMVC.Models.Employee
+@model DemoMVC.Models.Person
 
 @{
     ViewData["Title"] = "Details";
@@ -7,24 +7,24 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Employee</h4>
+    <h4>Person</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
+            @Html.DisplayNameFor(model => model.Hoten)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
+            @Html.DisplayFor(model => model.Hoten)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.Quequan)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.Quequan)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.EmployeeId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.CCCD">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
