--- a/DemoMVC/Views/Person/Index.cshtml
+++ b/DemoMVC/Views/Person/Index.cshtml
@@ -1,10 +1,41 @@
-<h1>Dữ liệu từ Controller gửi về là : @ViewBag.infoPerson</h1>
-<form asp-action="Index">
-    <label>Nhập PersonId</label>
-    <input type="text" name="PersonId">
-    <label>Nhập họ tên:</label>
-    <input type="text" name="FullName">
-    <label>Nhập địa chỉ:</label>
-    <input type="text" name="Address">
-    <input type="submit" value="Gửi dữ liệu">
-</form>
+@model IEnumerable<DemoMVC.Models.Person>
+
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Hoten)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quequan)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Hoten)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quequan)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.CCCD">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.CCCD">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.CCCD">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
